@@ -1,0 +1,2 @@
+
+puts -nonewline [fconfigure stdout -buffersize]
