@@ -67,6 +67,7 @@ set group3 {
         virtualhost.test
         inspect.test 
         redirect.test
+        channel.test
     }
 
 if { $testgroup3 } {
