@@ -1,3 +1,8 @@
+2015-01-12 Massimo Manghi <mxmanghi@apache.org>
+    * src/experimental/mod_rivet.c,mod_rivet_common.c,rivet_[prefork|worker]_bridge.c: fixed
+    various bugs with separate channel handling
+    * tests/channel.test,channel.tcl: adding test for SeparateChannels 
+
 2015-01-11 Massimo Manghi <mxmanghi@apache.org>
     * tests/redirect.test,redirect.rvt: adding test for command ::rivet::redirect
 
